--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "build/index.js",
   "scripts": {
-		"start": "tsc-watch --onSuccess 'node .'"
+    "start": "tsc-watch --onSuccess 'node .'"
   },
   "author": "Sarah Ohlin <sarahohlin1@gmail.com> (https://github.com/sarahkittyy)",
   "license": "MIT",
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@types/node": "^14.0.6",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "parse-duration": "^0.4.4"
   }
 }
